--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,21 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <goals>install</goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <developerConnection>
+            scm:git:https://github.com/dm4nk/pet-clinic.git
+        </developerConnection>
+    </scm>
 
 </project>
