[maven-release-plugin] prepare release 0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 
     <scm>
         <developerConnection>
-            scm:git:https://github.com/dm4nk/pet-clinic.git
+            scm:git:git@github.com:dm4nk/pet-clinic.git
         </developerConnection>
       <tag>0.0.1</tag>
   </scm>
