[maven-release-plugin] prepare release 0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
                 <configuration>
                     <goals>install</goals>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
+
+                    <pushChanges>false</pushChanges>
                 </configuration>
             </plugin>
         </plugins>
