--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.kn4md</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>pet-clinic</name>
     <description>pet-clinic</description>
     <properties>
@@ -52,6 +52,7 @@
         <developerConnection>
             scm:git:https://github.com/dm4nk/pet-clinic.git
         </developerConnection>
+    <tag>HEAD</tag>
   </scm>
 
 </project>
