saving progress: modifying pom

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Wed Oct 27 11:18:06 GMT+04:00 2021
+#Wed Oct 27 12:08:54 GMT+04:00 2021
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.scm.com.kn4md\:pet-clinic-web.empty=true
+project.rel.com.kn4md\:pet-clinic=0.0.1
+completedPhase=end-release
 scm.url=scm\:git\:git@github.com\:dm4nk/pet-clinic.git
+project.dev.com.kn4md\:pet-clinic-web=0.0.2-SNAPSHOT
+project.rel.com.kn4md\:pet-clinic-web=0.0.1
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=false
+project.scm.com.kn4md\:pet-clinic.tag=HEAD
+project.rel.com.kn4md\:pet-clinic-data=0.0.1
+project.dev.com.kn4md\:pet-clinic-data=0.0.2-SNAPSHOT
+scm.tag=0.0.1
+project.scm.com.kn4md\:pet-clinic-data.empty=true
+project.dev.com.kn4md\:pet-clinic=0.0.2-SNAPSHOT
+project.scm.com.kn4md\:pet-clinic.developerConnection=scm\:git\:https\://github.com/dm4nk/pet-clinic.git
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
