--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 
     <scm>
         <developerConnection>
-            scm:git:https://github.com/dm4nk/pet-clinic.git
+            scm:git:git@github.com:dm4nk/pet-clinic.git
         </developerConnection>
     <tag>HEAD</tag>
   </scm>
