Add Caching on Vets. closes #70

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.messages.basename=messages/messages
 spring.h2.console.enabled=true
 spring.profiles.active=jpa
+spring.web.resources.cache.cachecontrol.max-age=12h
