--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.target>11</maven.compiler.target>
 
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+        <hibernate.validator.version>6.1.2.Final</hibernate.validator.version>
     </properties>
 
     <dependencies>
@@ -50,6 +51,22 @@
         <dependency>
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
+        </dependency>
+        <!-- validation -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.validator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator-annotation-processor</artifactId>
+            <version>${hibernate.validator.version}</version>
         </dependency>
     </dependencies>
 
